The lab is done and checked

--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +636,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +874,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1314,7 @@
        "[40325 rows x 35 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1358,12 +1359,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DownVotes']\n"
+     ]
+    }
+   ],
    "source": [
     "#In this case I would erase the values because they all return zero. \n",
-    "#But if the data were relevant and did not exceed 70% of null data, I would surely keep them."
+    "#But if the data were relevant and did not exceed 70% of null data, I would surely keep them.\n",
+    "low_variance = []\n",
+    "\n",
+    "\n",
+    "for col in merge._get_numeric_data():\n",
+    "    minimum = min(merge[col])\n",
+    "    ninety_perc = np.percentile(merge[col], 90)\n",
+    "    if ninety_perc == minimum:\n",
+    "        low_variance.append(col)\n",
+    "        \n",
+    "print(low_variance)\n"
    ]
   },
   {
@@ -1375,16 +1394,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId_x                          int64\n",
+       "Reputation                        int64\n",
+       "CreationDate             datetime64[ns]\n",
+       "DisplayName                      object\n",
+       "LastAccessDate           datetime64[ns]\n",
+       "WebsiteUrl                       object\n",
+       "Location                         object\n",
+       "AboutMe                          object\n",
+       "Views                             int64\n",
+       "UpVotes                           int64\n",
+       "DownVotes                         int64\n",
+       "AccountId                         int64\n",
+       "Age                             float64\n",
+       "ProfileImageUrl                  object\n",
+       "postId                            int64\n",
+       "PostTypeId                        int64\n",
+       "AcceptedAnswerId                float64\n",
+       "CreaionDate              datetime64[ns]\n",
+       "Score                             int64\n",
+       "ViewCount                       float64\n",
+       "Body                             object\n",
+       "userId_y                        float64\n",
+       "LasActivityDate          datetime64[ns]\n",
+       "Title                            object\n",
+       "Tags                             object\n",
+       "AnswerCount                     float64\n",
+       "CommentCount                      int64\n",
+       "FavoriteCount                   float64\n",
+       "LastEditorUserId                float64\n",
+       "LastEditDate             datetime64[ns]\n",
+       "CommunityOwnedDate       datetime64[ns]\n",
+       "ParentId                        float64\n",
+       "ClosedDate               datetime64[ns]\n",
+       "OwnerDisplayName                 object\n",
+       "LastEditorDisplayName            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Bonus: Identify extreme values in your merged dataframe as you have learned in class, create a dataframe called outliers with the same columns as our data set and calculate the bounds. The values of the outliers dataframe will be the values of the merged_df that fall outside that bounds. You will need to save your outliers dataframe to a csv file on your-code folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>IQR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>userId_x</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>2.803740e+04</td>\n",
+       "      <td>1.632340e+04</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>12971.00</td>\n",
+       "      <td>28042.0</td>\n",
+       "      <td>42549.00</td>\n",
+       "      <td>55747.0</td>\n",
+       "      <td>29578.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reputation</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>8.407874e+01</td>\n",
+       "      <td>7.914265e+02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>101.00</td>\n",
+       "      <td>87393.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Views</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>8.909634e+00</td>\n",
+       "      <td>1.542740e+02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>20932.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UpVotes</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>6.587452e+00</td>\n",
+       "      <td>1.344937e+02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>11442.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DownVotes</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>2.609051e-01</td>\n",
+       "      <td>1.125292e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AccountId</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>2.032547e+06</td>\n",
+       "      <td>1.571884e+06</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>457867.00</td>\n",
+       "      <td>1816441.0</td>\n",
+       "      <td>3357012.00</td>\n",
+       "      <td>5027354.0</td>\n",
+       "      <td>2899145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>8318.0</td>\n",
+       "      <td>3.164258e+01</td>\n",
+       "      <td>9.294174e+00</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>35.00</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>postId</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>2.291740e+04</td>\n",
+       "      <td>1.390099e+04</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10989.00</td>\n",
+       "      <td>22249.0</td>\n",
+       "      <td>33815.00</td>\n",
+       "      <td>48728.0</td>\n",
+       "      <td>22826.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PostTypeId</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>1.635065e+00</td>\n",
+       "      <td>5.937047e-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AcceptedAnswerId</th>\n",
+       "      <td>7318.0</td>\n",
+       "      <td>2.337660e+04</td>\n",
+       "      <td>1.511723e+04</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11010.75</td>\n",
+       "      <td>21968.5</td>\n",
+       "      <td>33834.25</td>\n",
+       "      <td>114363.0</td>\n",
+       "      <td>22823.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Score</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>4.073453e+00</td>\n",
+       "      <td>6.569896e+00</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ViewCount</th>\n",
+       "      <td>16058.0</td>\n",
+       "      <td>1.199361e+03</td>\n",
+       "      <td>3.854320e+03</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>173.00</td>\n",
+       "      <td>385.0</td>\n",
+       "      <td>973.00</td>\n",
+       "      <td>175495.0</td>\n",
+       "      <td>800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>userId_y</th>\n",
+       "      <td>39285.0</td>\n",
+       "      <td>6.133109e+03</td>\n",
+       "      <td>5.275213e+03</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1329.00</td>\n",
+       "      <td>4881.0</td>\n",
+       "      <td>9773.00</td>\n",
+       "      <td>55226.0</td>\n",
+       "      <td>8444.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AnswerCount</th>\n",
+       "      <td>16058.0</td>\n",
+       "      <td>1.588616e+00</td>\n",
+       "      <td>2.048645e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CommentCount</th>\n",
+       "      <td>40325.0</td>\n",
+       "      <td>2.007936e+00</td>\n",
+       "      <td>2.670509e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FavoriteCount</th>\n",
+       "      <td>7349.0</td>\n",
+       "      <td>3.348483e+00</td>\n",
+       "      <td>7.611613e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LastEditorUserId</th>\n",
+       "      <td>19882.0</td>\n",
+       "      <td>4.664618e+03</td>\n",
+       "      <td>5.783066e+03</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>740.00</td>\n",
+       "      <td>2116.0</td>\n",
+       "      <td>7290.00</td>\n",
+       "      <td>53985.0</td>\n",
+       "      <td>6550.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ParentId</th>\n",
+       "      <td>23731.0</td>\n",
+       "      <td>2.015735e+04</td>\n",
+       "      <td>1.388639e+04</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7935.00</td>\n",
+       "      <td>18526.0</td>\n",
+       "      <td>30945.00</td>\n",
+       "      <td>48727.0</td>\n",
+       "      <td>23010.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    count          mean           std   min        25%  \\\n",
+       "userId_x          40325.0  2.803740e+04  1.632340e+04  -1.0   12971.00   \n",
+       "Reputation        40325.0  8.407874e+01  7.914265e+02   1.0       1.00   \n",
+       "Views             40325.0  8.909634e+00  1.542740e+02   0.0       0.00   \n",
+       "UpVotes           40325.0  6.587452e+00  1.344937e+02   0.0       0.00   \n",
+       "DownVotes         40325.0  2.609051e-01  1.125292e+01   0.0       0.00   \n",
+       "AccountId         40325.0  2.032547e+06  1.571884e+06  -1.0  457867.00   \n",
+       "Age                8318.0  3.164258e+01  9.294174e+00  13.0      26.00   \n",
+       "postId            40325.0  2.291740e+04  1.390099e+04   1.0   10989.00   \n",
+       "PostTypeId        40325.0  1.635065e+00  5.937047e-01   1.0       1.00   \n",
+       "AcceptedAnswerId   7318.0  2.337660e+04  1.511723e+04   5.0   11010.75   \n",
+       "Score             40325.0  4.073453e+00  6.569896e+00 -19.0       1.00   \n",
+       "ViewCount         16058.0  1.199361e+03  3.854320e+03  14.0     173.00   \n",
+       "userId_y          39285.0  6.133109e+03  5.275213e+03  -1.0    1329.00   \n",
+       "AnswerCount       16058.0  1.588616e+00  2.048645e+00   0.0       1.00   \n",
+       "CommentCount      40325.0  2.007936e+00  2.670509e+00   0.0       0.00   \n",
+       "FavoriteCount      7349.0  3.348483e+00  7.611613e+00   0.0       1.00   \n",
+       "LastEditorUserId  19882.0  4.664618e+03  5.783066e+03  -1.0     740.00   \n",
+       "ParentId          23731.0  2.015735e+04  1.388639e+04   1.0    7935.00   \n",
+       "\n",
+       "                        50%         75%        max        IQR  \n",
+       "userId_x            28042.0    42549.00    55747.0    29578.0  \n",
+       "Reputation             11.0      101.00    87393.0      100.0  \n",
+       "Views                   0.0        3.00    20932.0        3.0  \n",
+       "UpVotes                 0.0        0.00    11442.0        0.0  \n",
+       "DownVotes               0.0        0.00     1920.0        0.0  \n",
+       "AccountId         1816441.0  3357012.00  5027354.0  2899145.0  \n",
+       "Age                    30.0       35.00       94.0        9.0  \n",
+       "postId              22249.0    33815.00    48728.0    22826.0  \n",
+       "PostTypeId              2.0        2.00        7.0        1.0  \n",
+       "AcceptedAnswerId    21968.5    33834.25   114363.0    22823.5  \n",
+       "Score                   2.0        5.00      192.0        4.0  \n",
+       "ViewCount             385.0      973.00   175495.0      800.0  \n",
+       "userId_y             4881.0     9773.00    55226.0     8444.0  \n",
+       "AnswerCount             1.0        2.00      136.0        1.0  \n",
+       "CommentCount            1.0        3.00       45.0        3.0  \n",
+       "FavoriteCount           2.0        3.00      233.0        2.0  \n",
+       "LastEditorUserId     2116.0     7290.00    53985.0     6550.0  \n",
+       "ParentId            18526.0    30945.00    48727.0    23010.0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats = merge.describe().transpose()\n",
+    "stats['IQR'] = stats['75%'] - stats['25%']\n",
+    "stats"
    ]
   },
   {
@@ -1397,9 +1775,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ironhack_env]",
+   "display_name": "ironhack_env",
    "language": "python",
-   "name": "conda-env-ironhack_env-py"
+   "name": "ironhack_env"
   },
   "language_info": {
    "codemirror_mode": {
