The lab is done and checked

--- a/module-2/lab-probability-intro/your-code/main.ipynb
+++ b/module-2/lab-probability-intro/your-code/main.ipynb
@@ -19,12 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis 𝑃(𝐴∪𝐵)=0.6 is False, should be 0,9\\nThis 𝑃(𝐴∩(𝐵∪𝐵𝐶)) =0.4 -> 𝑃(𝐴∩(𝐵∪𝐵𝐶)) should equal to 0.3\\nThis 𝑃(𝐴𝐶∩𝐵𝐶) = 0.3\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This 𝑃(𝐴∪𝐵)=0.6 is False, should be 0,9\n",
+    "This 𝑃(𝐴∩(𝐵∪𝐵𝐶)) =0.4 -> 𝑃(𝐴∩(𝐵∪𝐵𝐶)) should equal to 0.3\n",
+    "This 𝑃(𝐴𝐶∩𝐵𝐶) = 0.3\n",
     "\"\"\""
    ]
   },
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +145,17 @@
    "source": [
     "\"\"\"\n",
     "your solution here\n",
+    "\n",
+    "Are independent events if all of the equations below are equal between them:\n",
+    "\n",
+    "(351/1000)==(520/1000)*(675/1000)\n",
+    "(169/1000)==(520/1000)*(325/1000)\n",
+    "(324/1000)==(480/1000)*(675/1000)\n",
+    "(156/1000)==(480/1000)*(325/1000)\n",
+    "\n",
+    "Since all the equations are true, the events are independents which means that wanting more light doesn't depend\n",
+    "on the gender.\n",
+    "\n",
     "\"\"\""
    ]
   }
