The lab is done and checked

--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,15 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
-    "from scipy.stats import ttest_1samp"
+    "from scipy.stats import t\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import ttest_1samp\n",
+    "from statsmodels.stats.proportion import proportions_ztest"
    ]
   },
   {
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,28 +123,6 @@
        "      <td>101592.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ABAD JR,  VICENTE M</td>\n",
-       "      <td>CIVIL ENGINEER IV</td>\n",
-       "      <td>WATER MGMNT</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>110064.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABASCAL,  REECE E</td>\n",
-       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
-       "      <td>OEMC</td>\n",
-       "      <td>P</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19.86</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -150,32 +132,26 @@
        "0    AARON,  JEFFERY M                                SERGEANT   \n",
        "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
        "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
-       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
-       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
        "\n",
        "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
        "0            POLICE                 F           Salary            NaN   \n",
        "1            POLICE                 F           Salary            NaN   \n",
        "2  GENERAL SERVICES                 F           Salary            NaN   \n",
-       "3       WATER MGMNT                 F           Salary            NaN   \n",
-       "4              OEMC                 P           Hourly           20.0   \n",
        "\n",
        "   Annual Salary  Hourly Rate  \n",
        "0       101442.0          NaN  \n",
        "1        94122.0          NaN  \n",
-       "2       101592.0          NaN  \n",
-       "3       110064.0          NaN  \n",
-       "4            NaN        19.86  "
+       "2       101592.0          NaN  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "salaries.head()"
+    "salaries.head(3)"
    ]
   },
   {
@@ -187,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +182,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +212,7 @@
        "Name: Salary or Hourly, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +282,7 @@
        "Name: Department, dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +375,7 @@
        "Name: Hourly, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,9 +399,20 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "filtered = salaries[salaries['Department']=='STREETS & SAN']\n",
+    "results_most_hourly = ttest_1samp(filtered['Hourly Rate'].dropna(), 35)\n",
+    "print(results_most_hourly)"
    ]
   },
   {
@@ -451,9 +438,156 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Typical Hours  Annual Salary  Hourly Rate\n",
+      "Salary or Hourly                                           \n",
+      "Hourly                34.507604            NaN    32.788558\n",
+      "Salary                      NaN    86786.99979          NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mean_values = salaries.groupby('Salary or Hourly').mean()\n",
+    "print(mean_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval for the mean hourly wage of all hourly workers is: (9.04624854199498, 56.53086689056758)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_hourly = stats.sem(salaries['Hourly Rate'].dropna(), axis = 0, ddof = len(salaries['Hourly Rate'].dropna())-1)\n",
+    "\n",
+    "\n",
+    "confidence_interval_hourly = t.interval(alpha = 0.95, \n",
+    "                                        df = len(salaries['Hourly Rate'].dropna())-1, \n",
+    "                                        loc = mean_values['Hourly Rate'][0], \n",
+    "                                        scale = mean_hourly)\n",
+    "\n",
+    "\n",
+    "print(f'The confidence interval for the mean hourly wage of all hourly workers is: {confidence_interval_hourly}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ABBATE,  TERRY M</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93354.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Name                              Job Titles Department  \\\n",
+       "0  AARON,  JEFFERY M                                SERGEANT     POLICE   \n",
+       "1    AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)     POLICE   \n",
+       "9   ABBATE,  TERRY M                          POLICE OFFICER     POLICE   \n",
+       "\n",
+       "  Full or Part-Time Salary or Hourly  Typical Hours  Annual Salary  \\\n",
+       "0                 F           Salary            NaN       101442.0   \n",
+       "1                 F           Salary            NaN        94122.0   \n",
+       "9                 F           Salary            NaN        93354.0   \n",
+       "\n",
+       "   Hourly Rate  \n",
+       "0          NaN  \n",
+       "1          NaN  \n",
+       "9          NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filtered police department\n",
+    "police_dep= salaries[salaries['Department']=='POLICE']\n",
+    "\n",
+    "# filtered police board department\n",
+    "police_board = salaries[salaries['Department'] == 'POLICE BOARD']\n",
+    "\n",
+    "# join both filter together\n",
+    "filtered_police = police_dep.append(police_board)\n",
+    "filtered_police.head(3)"
    ]
   },
   {
@@ -465,11 +599,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval for all salaried employeed in the police is: (50671.13382417666, 122301.59062756138)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "most_salaried_police_workers = crosstab_function['Salary']['POLICE'] + crosstab_function['Salary']['POLICE BOARD']\n",
+    "\n",
+    "mean_error_salary=stats.sem(filtered_police['Annual Salary'].dropna(), axis=0, ddof=len(filtered_police['Annual Salary'].dropna())-1)\n",
+    "\n",
+    "confidence_interval_salary = t.interval(alpha=0.95, \n",
+    "                                        df=len(filtered_police['Annual Salary'].dropna())-1,\n",
+    "                                        loc=filtered_police['Annual Salary'].dropna().mean(),\n",
+    "                                        scale=mean_error_salary)\n",
+    "\n",
+    "\n",
+    "print(f'The confidence interval for all salaried employeed in the police is: {confidence_interval_salary}')"
    ]
   },
   {
@@ -487,11 +640,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "test_hypothesis = proportions_ztest(count=sum(most_hourly_workers), nobs = salaries['Name'].count(), value = 0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-3.5099964213703005, 0.0004481127249057967)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_hypothesis)"
    ]
   }
  ],
